--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -15,7 +15,7 @@ repos:
       - id: check-merge-conflict
       - id: debug-statements
 
-  # Python code formatting
+  # Python code formatting (run before lint)
   - repo: https://github.com/psf/black
     rev: 23.12.1
     hooks:
@@ -29,12 +29,11 @@ repos:
       - id: isort
         args: ["--profile", "black"]
 
-  # Linting
+  # Linting (respects [tool.flake8] in pyproject.toml)
   - repo: https://github.com/pycqa/flake8
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=88]
 
   # Type checking
   # - repo: https://github.com/pre-commit/mirrors-mypy
